test/errors/structure_types_error/zs/table_array_field_error.zs
package table_array_field_error;

sql_table TestTable
{
    int32       schoolId;
    int32       classId;
    int32       studentId;

    sql "PRIMARY KEY (schoolId)";
};

struct TableArrayFieldError
{
    // This must cause an error.
    TestTable   testTableArray[10];
};
